Refactored service and added some directives to display data

--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -5,6 +5,12 @@
 
 </ul>
 
+<div class = "properties-list">
+<li *ngFor = "let p of properties">
+{{p.Address}}
+</li>
+</div>
+
 <p>
   The greatest property search around!
 </p>
