Added more CSS, testimonials
I have added a bit more Bootstrap/CSS and a testimonials area. The
quotes can be changed of course. I was just attempting humor.

--- a/project3/src/app/home/home.component.html
+++ b/project3/src/app/home/home.component.html
@@ -1,16 +1,60 @@
-<h1>  Welcome to the CISC 474 Housing Application </h1>
-
-<h2> Explore Housing All throughout the Newark Area </h2><br>
-
-<div id="instructions">
-    Use the Menu above to navigate the site.
-</div>
-
-<div id="featuredProperty">
-    Featured Property!
-    <div id = "randomProperty">
-
+<div class="jumboContainer">
+    <div class="jumbotron">
+        <h1>  Welcome to the CISC 474 Housing Application </h1>
+        <h2> Explore Housing All throughout the Newark Area </h2><br>
+        <hr class="my-4">
+        <p>Use the Menu above to navigate the site.</p>
+        <div id="featuredProperty">
+            Featured Property!
+            <div id = "randomProperty">
+            </div>
+        </div>
+        <span>Satisfaction Guaranteed!</span>
     </div>
 </div>
 
-<p>Satisfaction Guaranteed!</p> 
+<section class="section pb-3 text-center">
+    <h1 class="section-heading h1 pt-4">Testimonials</h1>
+    <p class="section-description">Don't just take our word for it! Hear what people are saying about our site.</p>
+    <div class="row">
+        <div class="col-lg-4 col-md-12 mb-r">
+            <div class="card testimonial-card">
+                <div class="card-up teal lighten-2"></div>
+                <div class="avatar"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="center-block rounded-circle img-responsive"></div>
+                <div class="card-body">
+                    <h4 class="card-title mt-1">James H</h4>
+                    <hr>   
+                    <p><i class="fa fa-quote-left"></i>I found my apartment on this site quickly and easily. 
+                        I really like the low rent and it will really come in handy when I can't find a job after graduation!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12 mb-r">
+            <div class="card testimonial-card">
+                <div class="card-up blue lighten-2"></div>
+                <div class="avatar"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="center-block rounded-circle img-responsive"></div>
+                <div class="card-body">
+                    <h4 class="card-title mt-1">Anna C</h4>
+                    <hr>
+                    <p><i class="fa fa-quote-left"></i> I tried other sites before coming to this one but none had exactly what I was looking for.
+                        This site helped me find exactly what I was looking for. I love my new apartment! The rats are kinda cute once you get used
+                        to them...</p>
+                </div>
+            </div>
+        </div>
+               
+        <div class="col-lg-4 col-md-12 mb-r">
+            <div class="card testimonial-card">
+                <div class="card-up deep-purple lighten-2"></div>
+                <div class="avatar"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg" class="center-block rounded-circle img-responsive"></div>
+                <div class="card-body">
+                    <h4 class="card-title mt-1">Mark B</h4>
+                    <hr>
+                    <p><i class="fa fa-quote-left"></i> Partway through my freshman year I realized that living in the dorm was not for me. 
+                        I needed to get out of there quickly and this site made the process so easy. Goodbye shared bathrooms, hello crippling 
+                        debt. Thanks!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
