--- a/project3/src/app/app.component.html
+++ b/project3/src/app/app.component.html
@@ -1,26 +1,28 @@
-<nav class="navbar-wrapper navbar-default navbar-fixed-top navbar-static-top nav-container" role="navigation">
-  <div class="">
-    <div class="navbar-header">
-      <a class="navbar-brand brand" href="#">Housing Search</a>
-      <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed" aria-controls="navMenu"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
-    </div>
-    <div>
-      <div class="navbar" id ="navMenu" [ngbCollapse]='isCollapsed'>
-        <ul class="nav navbar-nav">
-          <li routerLinkActive='active'>
-            <a routerLink="home" class="navbar-link links">Home</a>
-          </li>
-          <li routerLinkActive='active'>
-            <a routerLink="viewListings" class="links">View Listings</a>
-          </li>
-          <li routerLinkActive='active'>
-            <a routerLink="postListing" class="links">Post Listings</a>
-          </li>
-        </ul>
+<div class="navContainer" ng-if="isCollapsed" class="paddingCollapsed">
+  <nav class="navbar-wrapper navbar-default navbar-fixed-top navbar-static-top nav-container " role="navigation">
+    <div class="">
+      <div class="navbar-header">
+        <button type="button" class="btn btn-outline-primary pull-left" (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="navMenu"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+        <a class="navbar-brand brand" href="#">Housing Search</a>
+      </div>
+      <div>
+        <div class="navbar" id ="navMenu" [ngbCollapse]='isCollapsed'>
+          <ul class="nav navbar-nav">
+            <li routerLinkActive='active'>
+              <a routerLink="home" class="navbar-link links">Home</a>
+            </li>
+            <li routerLinkActive='active'>
+              <a routerLink="viewListings" class="links">View Listings</a>
+            </li>
+            <li routerLinkActive='active'>
+              <a routerLink="postListing" class="links">Post Listings</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
 <router-outlet></router-outlet>
 
