--- a/project3/src/app/home/home.component.css
+++ b/project3/src/app/home/home.component.css
@@ -1,3 +1,6 @@
-body{
-    padding-top: 100px;
+
+@media only screen and (max-width: 760px) {
+    .jumboContainer{
+        padding-top: 200px;
+    }
 }
