--- a/project3/src/app/home/home.component.html
+++ b/project3/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumboContainer">
     <div class="jumbotron">
         <h1>  Welcome to the CISC 474 Housing Application </h1>
-        <h2> Explore Housing All throughout the Newark Area </h2><br>
+        <h2> Explore Housing All Throughout the Newark Area </h2><br>
         <hr class="my-4">
         <p>Use the Menu above to navigate the site.</p>
         <div id="featuredProperty">
