--- a/project3/src/app/post-listing/post-listing.component.html
+++ b/project3/src/app/post-listing/post-listing.component.html
@@ -47,30 +47,33 @@
           }
       </script>
   <form id = "propteryPosting">
-      Address: <br>
-      <input type="text" id="address"><br>
+      <p>Address: <br>
+      <input type="text" id="address"><br> <br>
       Rent: <br>
-      <input type="text" id="rent"><br>
+      <input type="text" id="rent"><br> <br>
       Bedrooms: <br>
-      <input type="text" id="bedrooms"><br>
+      <input type="text" id="bedrooms"><br> <br>
       Bathrooms: <br>
-      <input type="text" id="bathrooms"><br>
+      <input type="text" id="bathrooms"><br> <br>
       Number of Tenants: <br>
-      <input type="text" id="inhabitants"><br>
-      Type:<br>
+      <input type="text" id="inhabitants"><br> <br>
+      Type:
+      </p>
       <input type="radio" id = 'apt' name="type" value="apartment" checked> Apartment<br>
       <input type="radio" id = 'th' name="type" value="townhouse"> Townhouse<br>
       <input type="radio" id = 'h' name="type" value="house"> House <br>
-
+ <p>
+   <br>
       Owner/Posters Name: <br>
       <input type = "text" id = "owner"><br>
-    
+        </p>
+      <br>
       <button (click) = "submitPost()" id = "submit"> Post Listing! </button> 
       
     
     </form>
 
   
-
+    <br>
   <p> Coded on the cutting edge of technology</p>
 </div>
