--- a/project3/src/app/search-listings/search-listings.component.css
+++ b/project3/src/app/search-listings/search-listings.component.css
@@ -1,9 +1,13 @@
 .listingContainer{
     padding-top: 100px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 760px) {
     .listingContainer{
         padding-top: 200px;
     }
+}
+p {
+    font-weight: bold;
 }
