--- a/project3/src/app/search-listings/search-listings.component.html
+++ b/project3/src/app/search-listings/search-listings.component.html
@@ -2,17 +2,19 @@
   <h1> Search For Properties by Type</h1>
 
   <form id = "searchField">
-    Maximum Rent: <br>
-    <input type="text" id="maxrent"><br>
+    <p>
+      Maximum Rent: <br>
+    <input type="text" id="maxrent"><br><br>
     Bedrooms: <br>
-    <input type="text" id="bedrooms"><br>
+    <input type="text" id="bedrooms"><br><br>
     Number of Inhabitants: <br>
-    <input type="text" id="inhabitants"><br>
+    <input type="text" id="inhabitants"><br><br>
     Type:<br>
+    </p>
     <input type="radio" name="apartment" value="apartment" checked> Apartment<br>
     <input type="radio" name="townhouse" value="townhouse"> Townhouse<br>
     <input type="radio" name="house" value="house"> Apartment <br>
-
+    <br>
     <button id = "submit"> Search! </button> 
     
 
@@ -20,7 +22,7 @@
 
   <p>
 
-
+    <br>
     search-listings works!
   </p>
 </div>
