--- a/project3/src/app/home/home.component.html
+++ b/project3/src/app/home/home.component.html
@@ -1,15 +1,20 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <div class="jumboContainer">
     <div class="jumbotron">
-        <h1>  Welcome to the CISC 474 Housing Application </h1>
+        <h1>  CISC 474 Housing Locater </h1>
         <h2> Explore Housing All Throughout the Newark Area </h2><br>
-        <hr class="my-4">
-        <p>Use the Menu above to navigate the site.</p>
-        <div id="featuredProperty">
+        
+      <!--  <div id="featuredProperty">
             Featured Property!
             <div id = "randomProperty">
             </div>
+        </div>-->
+        <div class="bottom">
+        <h3>Satisfaction Guaranteed!</h3>
         </div>
-        <span>Satisfaction Guaranteed!</span>
     </div>
 </div>
 
@@ -58,3 +63,18 @@
         </div>
     </div>
 </section>
+
+<style type="text/css">
+    .jumbotron {
+        background-image: url('http://www.english.udel.edu/PublishingImages/PAGES_MEM-north_Autumn2013_640.jpg');
+        background-repeat: no-repeat;
+       background-position: center;
+       background-size: 100%;
+       color: #00539F; 
+    }
+    </style>
+    <style type="text/css">
+        .bottom {
+           color: gold;
+        }
+        </style>
