--- a/project3/src/app/home/home.component.css
+++ b/project3/src/app/home/home.component.css
@@ -2,8 +2,32 @@
 @media only screen and (max-width: 760px) {
     .jumboContainer{
         padding-top: 200px;
+        
     }
 }
 body {
     text-align: center;
+
+    
 }
+
+h1 {
+    
+    font-family: 'Dancing Script', Georgia, Times, serif;
+    margin-top: 50px;
+	font-size: 59px;
+	line-height: 60px;
+    font-weight: bold;
+}
+h2 {
+	font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+	font-size: 30px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 30px;
+    font: 'Berkshire Swash', Helvetica, sans-serif;
+    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    }
