properties now read from the database

--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -1,14 +1,11 @@
 <div class="listingContainer">
   <h1>Current Properties Available</h1>
   <br>
-  <ul id="Property List">
-    <li>Currently No Properties to Display</li>
-
-  </ul>
+  
 
   <div class = "properties-list">
   <li *ngFor = "let p of properties">
-  {{p.Address}}
+  {{p.address}}
   </li>
   </div>
 
