Some data bindings

--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -8,7 +8,7 @@
 
   <div class = "properties-list">
   <li *ngFor = "let p of properties">
-  {{p.Address}}
+  <a [routerLink]="['/individual-listing', p.id]">{{p.Address}}</a>
   </li>
   </div>
 
