changed type box on post listing

--- a/project3/src/app/home/home.component.css
+++ b/project3/src/app/home/home.component.css
@@ -18,16 +18,18 @@ h1 {
 	font-size: 59px;
 	line-height: 60px;
     font-weight: bold;
+    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
 }
 h2 {
 	font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
 	font-size: 30px;
     line-height: 40px;
     font-weight: bold;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 h3 {
     font-size: 30px;
     font: 'Berkshire Swash', Helvetica, sans-serif;
-    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
