--- a/project3/src/app/post-listing/post-listing.component.css
+++ b/project3/src/app/post-listing/post-listing.component.css
@@ -15,3 +15,16 @@ p {
     display: inline-block;
     width: 175px;
 }
+h1 {
+    font-family: 'Dancing Script', Georgia, Times, serif;
+    margin-top: 50px;
+	font-size: 59px;
+	line-height: 60px;
+    font-weight: bold;
+}
+h2 {
+	font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+	font-size: 30px;
+    line-height: 40px;
+    font-weight: bold;
+}
