--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -4,7 +4,7 @@
   
  <div class = "properties-list">
   <li *ngFor = "let p of properties">
-  <a [routerLink]="['/individual-listing', p.id]">{{p.Address}}</a>
+  <a [routerLink]="['/individual-listing', p.id]">{{p.address}}</a>
   </li>
   </div>
 
