--- a/project3/src/app/app.component.html
+++ b/project3/src/app/app.component.html
@@ -1,3 +1,7 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <div class="navContainer" ng-if="isCollapsed" class="paddingCollapsed">
   <nav class="navbar-wrapper navbar-default navbar-fixed-top navbar-static-top nav-container " role="navigation">
     <div class="">
