--- a/project3/src/app/view-listings/view-listings.component.css
+++ b/project3/src/app/view-listings/view-listings.component.css
@@ -2,11 +2,53 @@
     padding-top: 100px;
     text-align: center;
 }
+#properties-list{
+    text-align: center;
+    
+}
+ul{ 
+    list-style-type: none; 
+}
+
+#propertyBox{
+    display: table;
+    border-bottom: 3px solid rgb(45, 39, 102);
+    text-align: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#propertyRow{
+    
+    display: table-row;
+}
+#boxAddress{
+    display: table-cell;
+    padding: 15px;
+    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+    font-size: 24px;
+}
+#boxDetails{
+    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+    display: table-cell;
+    padding: 15px;
+    
+}
 
 @media only screen and (max-width: 760px) {
     .listingContainer{
         padding-top: 200px;
     }
+}
+p {
+    font-weight: bold;
+}
+
+.form-control {
+    display: inline-block;
+    width: 175px;
 }
 
 h1 {
@@ -22,4 +64,5 @@ h2 {
     line-height: 40px;
     font-weight: bold;
 }
+
 
