--- a/project3/src/app/individual-listing/individual-listing.component.css
+++ b/project3/src/app/individual-listing/individual-listing.component.css
@@ -7,15 +7,29 @@
 .image-container {
     padding-top:20px;
 }
-
+#mainContainer{
+    display: table;
+    position: absolute;
+    padding-bottom: 150px;
+    border-bottom: 3px solid rgb(45, 39, 102);
+    text-align: center;
+    
+    
+    
+}
 .info-table-container {
+    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+    font-size: 24px;
     padding-top:45px;
     padding-left:15px;
 }
 
 .title {
-    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
-    font-size: 24px;
+    font-family: 'Dancing Script', Georgia, Times, serif;
+    margin-top: 50px;
+	font-size: 59px;
+	line-height: 60px;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 760px) {
