--- a/project3/src/app/search-listings/search-listings.component.html
+++ b/project3/src/app/search-listings/search-listings.component.html
@@ -54,10 +54,9 @@
   </div>
 </div>
 
-<p>
-    
-        <br>
-        Sticky Floors not Included
-      </p>
+<h3>
+   
+        Sticky Floors Not Included
+</h3>
 </div>
   
