--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -18,9 +18,9 @@
       </li>
       </ul>
     </div> 
-
+    <h3>The greatest property search around!</h3>
   <p>
       <br>
-    The greatest property search around!
+   
   </p>
 </div>
