--- a/project3/src/app/post-listing/post-listing.component.css
+++ b/project3/src/app/post-listing/post-listing.component.css
@@ -28,3 +28,8 @@ h2 {
     line-height: 40px;
     font-weight: bold;
 }
+h3 {
+    font-size: 30px;
+    font: 'Berkshire Swash', Helvetica, sans-serif;
+    color: goldenrod;
+}
