a few more style changes

--- a/project3/src/app/individual-listing/individual-listing.component.html
+++ b/project3/src/app/individual-listing/individual-listing.component.html
@@ -8,20 +8,17 @@
                 <img src = {{link}}> 
                 
         </div>
-<div class = "row">
+</div>
 
-<div class = "col-md-7">
-<div class = "info-table-container">
-<table>
+<h3>
+
     
-<tr> Rent: {{properties.rent}} </tr>
-<tr> Tenants: {{properties.tenants}} </tr>
-<tr> Bedrooms: {{properties.bedrooms}} </tr>
-<tr> Bathrooms: {{properties.bathrooms}} </tr>
-<tr> Owner: {{properties.owner}}</tr> 
-</table>
-</div>
-</div>
-</div>
-</div>
+ Rent: {{properties.rent}} <br>
+ Tenants: {{properties.tenants}} <br>
+ Bedrooms: {{properties.bedrooms}} <br>
+ Bathrooms: {{properties.bathrooms}} <br>
+ Owner: {{properties.owner}}<br> 
+
+</h3>
+
 
