--- a/project3/src/app/individual-listing/individual-listing.component.css
+++ b/project3/src/app/individual-listing/individual-listing.component.css
@@ -11,8 +11,8 @@
 }
 #mainContainer{
     display: table;
-    padding-bottom: 150px;
-    border-bottom: 3px solid rgb(45, 39, 102);
+    padding-bottom: 10px;
+    
     text-align: center;
     margin: 0 auto;
    
@@ -27,7 +27,7 @@
     font-size: 24px;
     padding-top:45px;
     padding-left:15px;
-    text-align: left;
+    text-align: center;
 }
 
 .title {
@@ -37,6 +37,14 @@
 	line-height: 60px;
     font-weight: bold;
     
+}
+
+.table{
+    text-align: center;
+}
+
+.tr{
+    text-align: center;
 }
 
 @media only screen and (max-width: 760px) {
@@ -61,3 +69,13 @@ h2 {
     line-height: 40px;
     font-weight: bold;
 }
+
+h3{
+    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    padding-top:45px;
+    padding-left:15px;
+    text-align: center;
+}
+
+
