--- a/project3/src/app/view-listings/view-listings.component.html
+++ b/project3/src/app/view-listings/view-listings.component.html
@@ -18,7 +18,7 @@
       </li>
       </ul>
     </div> 
-    <h3>The greatest property search around!</h3>
+    <p>The greatest property search around!</p>
   <p>
       <br>
    
