--- a/project3/src/app/home/home.component.html
+++ b/project3/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="jumboContainer">
     <div class="jumbotron">
-        <h1>  CISC 474 Housing Locater </h1>
+        <div class="bannerTitle">  UD-OffCampus </div>
         <h2> Explore Housing All Throughout the Newark Area </h2><br>
         
       <!--  <div id="featuredProperty">
@@ -9,9 +9,7 @@
             <div id = "randomProperty">
             </div>
         </div>-->
-        <div class="bottom">
-        <h3>Satisfaction Guaranteed!</h3>
-        </div>
+        
     </div>
 </div>
 
