--- a/project3/src/app/individual-listing/individual-listing.component.html
+++ b/project3/src/app/individual-listing/individual-listing.component.html
@@ -10,7 +10,7 @@
         </div>
 </div>
 
-<h3>
+<div class = "details">
 
     
  Rent: {{properties.rent}} <br>
@@ -19,6 +19,6 @@
  Bathrooms: {{properties.bathrooms}} <br>
  Owner: {{properties.owner}}<br> 
 
-</h3>
+</div>
 
 
