--- a/project3/src/app/post-listing/post-listing.component.css
+++ b/project3/src/app/post-listing/post-listing.component.css
@@ -16,7 +16,7 @@ p {
     width: 175px;
 }
 h1 {
-    font-family: 'Dancing Script', Georgia, Times, serif;
+    font-family: 'College Block', Georgia, Times, serif;
     margin-top: 50px;
 	font-size: 59px;
 	line-height: 60px;
