--- a/project3/src/app/view-listings/view-listings.component.css
+++ b/project3/src/app/view-listings/view-listings.component.css
@@ -52,7 +52,7 @@ p {
 }
 
 h1 {
-    font-family: 'Dancing Script', Georgia, Times, serif;
+    font-family: 'College Block', Georgia, Times, serif;
     margin-top: 50px;
 	font-size: 59px;
 	line-height: 60px;
