--- a/project3/src/app/individual-listing/individual-listing.component.html
+++ b/project3/src/app/individual-listing/individual-listing.component.html
@@ -13,11 +13,12 @@
 <div class = "details">
 
     
- Rent: {{properties.rent}} <br>
- Tenants: {{properties.tenants}} <br>
- Bedrooms: {{properties.bedrooms}} <br>
- Bathrooms: {{properties.bathrooms}} <br>
+ Rent: {{rent}} <br>
+ Tenants: {{tenants}} <br>
+ Bedrooms: {{bedrooms}} <br>
+ Bathrooms: {{bathrooms}} <br>
  Owner: {{properties.owner}}<br> 
+ Contact: {{properties.contact}}<br>
 
 </div>
 
