--- a/project3/src/app/search-listings/search-listings.component.html
+++ b/project3/src/app/search-listings/search-listings.component.html
@@ -41,7 +41,7 @@
     <div id = "propertyBox">
       <div id = "propertyRow">
       <div id = "boxAddress">
-        <a [routerLink]="['/individual-listing', p.id]">{{p.address}}</a>
+        <a [routerLink]="['/individual-listing', p.address]">{{p.address}}</a>
       </div>
       <div id = "boxDetails">Rent:  {{p.rent}}</div>
       <div id = "boxDetails">Tenants:  {{p.tenants}}</div>
