--- a/project3/src/app/post-listing/post-listing.component.html
+++ b/project3/src/app/post-listing/post-listing.component.html
@@ -1,7 +1,7 @@
 <div class="listingContainer">
   <h1>Post a Property Listing</h1> 
   <h2>Enter a property that is available for rent below</h2> 
- 
+ <div class = "mess"> {{successMessage}}</div>
   <form name = "propteryPosting">
       <p>Address: <br>
       <input type="text" [(ngModel)]='address' name="address"><br> <br>
